--- a/src/lib/pushplay.html
+++ b/src/lib/pushplay.html
@@ -7,7 +7,7 @@
     <title>pushplay</title>
     <script
       type="text/javascript"
-      src="./EXEStarter.js"
+      src="https://res01.aibao.com/js/EXEStarter/EXEStarter_3.8.1.0.js"
       charset="utf-8"
     ></script>
   </head>
